@@ -6,7 +6,6 @@ import org.springframework.stereotype.Component;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Component
 public class XML201809Validator {
@@ -24,7 +23,7 @@ public class XML201809Validator {
         List<String> errors = rules.entrySet().stream()
                 .filter(s -> s.getValue().equals(true))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
 
         if (!errors.isEmpty()) {
             throw new ValidationException(errors);
